SCT: PDF - Reporte de inversión acumulada

--- a/PMCTool.App/Views/AccumulatedInvestment/Index.cshtml
+++ b/PMCTool.App/Views/AccumulatedInvestment/Index.cshtml
@@ -85,8 +85,8 @@
                         </div>
                     </div>
                     <div class="row justify-content-center mt-4">
-                        <div class="col-md-12 text-right text-right" hidden>
-                            <button class="btn btn-social btn-tumblr btn-link">
+                        <div class="col-md-12 text-right text-right">
+                            <button class="btn btn-social btn-tumblr btn-link" id="export">
                                 <i class="fas fa-file-pdf"></i> Exportar en PDF
                             </button>
                         </div>
@@ -116,6 +116,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/9.1.2/modules/exporting.src.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/9.1.2/modules/exporting.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/9.1.2/modules/export-data.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/9.1.2/modules/accessibility.js" type="text/javascript"></script>
 
     <script src="~/js/core/vAccumulatedInvestment.js" asp-append-version="true"></script>
 }
