--- a/PMCTool.App/Views/FactSheet/A/_ParcialIndex.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/_ParcialIndex.cshtml
@@ -318,6 +318,7 @@
                                       ]
                                   },
                                   options: {
+                                      animation: false,
                                       legend: { position: 'bottom' }
                                   }
                               });
