--- a/PMCTool.App/Views/FactSheet/A/ProjectDetail.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/ProjectDetail.cshtml
@@ -117,7 +117,7 @@
                                                     { 
                                                     <tr>
                                                         <th scope="row">@r.ProjectLayerName</th>
-                                                        <td><a class="aclick" data-evidence="@r.ProjectEvidenceID" onclick="factSheetA.getControlPoints(this)">@r.Description</a></td>
+                                                        <td><a class="aclick" data-evidence="@r.ProjectEvidenceID" onclick="factSheetA.getControlPoints(this)" style="cursor:pointer">@r.Description</a></td>
                                                          @{  
                                                                     @switch (@r.Status)
                                                                     {
