--- a/PMCTool.App/Views/ActionsToMake/Index.cshtml
+++ b/PMCTool.App/Views/ActionsToMake/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PMCTool.Models.Core.Location
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Acciones a realizar";
     Layout = "_Layout";
 }
 <div class="content">
