--- a/PMCTool.App/Views/FactSheet/A/ProjectDetailReport.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/ProjectDetailReport.cshtml
@@ -105,7 +105,7 @@
                                                                                 <td><span class="bold ws st-cimpacto ws">Con impacto</span></td> 
                                                                             break;
                                                                         case 4: 
-                                                                                <td><span class="bold ws st-cerrado ws">Cerrado</span></td> 
+                                                                                <td><span class="bold ws st-cerrado ws">Terminado</span></td> 
                                                                             break;
                                                                         case 5:  
                                                                                 <td><span class="bold ws st-cancelado  ws">Cancelado</span></td> 
@@ -156,7 +156,7 @@
                                                                                         <td><span class="bold ws st-cimpacto ws">Con impacto</span></td> 
                                                                                     break;
                                                                                 case 4: 
-                                                                                        <td><span class="bold ws st-cerrado ws">Cerrado</span></td> 
+                                                                                        <td><span class="bold ws st-cerrado ws">Terminado</span></td> 
                                                                                     break;
                                                                                 case 5:  
                                                                                         <td><span class="bold ws st-cancelado  ws">Cancelado</span></td> 
@@ -257,7 +257,7 @@
                                                                                 <td><span class="bold ws st-cimpacto ws">Con impacto</span></td> 
                                                                             break;
                                                                         case 4: 
-                                                                                <td><span class="bold ws st-cerrado ws">Cerrado</span></td> 
+                                                                                <td><span class="bold ws st-cerrado ws">Terminado</span></td> 
                                                                             break;
                                                                         case 5:  
                                                                                 <td><span class="bold ws st-cancelado  ws">Cancelado</span></td> 
