--- a/PMCTool.App/Views/ProjectsLocations/Index.cshtml
+++ b/PMCTool.App/Views/ProjectsLocations/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PMCTool.Models.Core.Location
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Ubicacion de proyectos";
     Layout = "_Layout";
 }
 
