SCT v1.1 - Correciones Reporte de Incidencias Reportadas

--- a/PMCTool.App/Views/ReportedIncidents/_ParcialIncidentsByProject.cshtml
+++ b/PMCTool.App/Views/ReportedIncidents/_ParcialIncidentsByProject.cshtml
@@ -59,7 +59,7 @@
 
                                     break;
                                 case 4:
-                                    <td><span class="bold ws st-cerrado ws">Cerrado</span></td>
+                                    <td><span class="bold ws st-cerrado ws">Terminado</span></td>
 
                                     break;
                                 case 5:
