--- a/PMCTool.App/Views/ReportedIncidents/_ParcialTableIncidents.cshtml
+++ b/PMCTool.App/Views/ReportedIncidents/_ParcialTableIncidents.cshtml
@@ -9,7 +9,7 @@
             </div>
 
             <div class="col-md-12">
-                <table class="table table-hover table-striped tbimpact">
+                <table class="table table-hover table-striped tbincidents">
                     <thead>
                         <tr style="background-color: #235b4e;">
                             <th>Codigo</th>
@@ -40,7 +40,7 @@
 
                                         break;
                                     case 4:
-                                        <td><span class="bold ws st-cerrado ws">Cerrado</span></td>
+                                        <td><span class="bold ws st-cerrado ws">Terminado</span></td>
 
                                         break;
                                     case 5:
