--- a/PMCTool.App/Views/ReportedIncidents/Index.cshtml
+++ b/PMCTool.App/Views/ReportedIncidents/Index.cshtml
@@ -1,97 +1,99 @@
 ﻿@model PMCTool.Models.Core.Location
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Incidencias Reportadas";
     Layout = "_Layout";
 }
-    <div class="content">
-        <div class="container-fluid">
-            <div class="row card">
-                <div class="col-md-12 pt-2">
-                    <small class="font-weight-normal">Analytics</small>
-                    <h4 class="Chapala align-items-center font-weight-bold  mb-0 mt-0">
-                        <span style="color: #235b4e !important;"> Incidencias	</span>
-                    </h4>
-                </div>
-                <div class="col-md-12" id="divContainer" style="">
-                    <div class="row justify-content-center mt-3">
-                        <div class="col-12">
-                            <div class="row">
-                                <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                    @Html.DropDownListFor(m => m.Name, new SelectList(ViewBag.States, "Key", "Value"), new { multiple = true, @id = "Entidad", @class = "selectpicker", @data_style = "btn-default btn-outline", @data_title = "Entidad Federativa", @data_live_search = true, @data_actions_box = true })
-                                </div>
-                                <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                    <select multiple name="DireccionG" id="DireccionGral" class="selectpicker" data-title="Dirección General" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
-                                        <option value="ARTF">Agencia Reguladora de Transporte Ferroviario</option>
-                                        <option value="DGC">DG Carretera</option>
-                                        <option value="DGCC">DG Conservación de Carreteras</option>
-                                        <option value="DGDC">DG Desarrollo carretero</option>
-                                        <option value="DGTFM">DG Transporte Ferroviario y Multimodal</option>
-                                        <option value="Otros">Otros</option>
-                                    </select>
-                                </div>
-                                <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                    <select multiple name="TipoP" id="TipoProyecto" class="selectpicker" data-title="Tipo de proyecto" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
-                                        <option value="1">Infraestructura para el bienestar</option>
-                                        <option value="2">Reactivación Económica</option>
-                                        <option value="3">Accesorio</option>
-                                        <option value="4">Territorio Yaqui</option>
-                                        <option value="5">Compromisos de presiones sociales</option>
-                                        <option value="6">Obras de compromiso sectorial</option>
-                                        <option value="7">Por Definir</option>
-                                    </select>
-                                </div>
-                                <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                    <select multiple name="Etapa" id="Etapa" class="selectpicker" data-title="Etapa" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
-                                        <option value="1">En ejecución</option>
-                                        <option value="2">En proceso para ejecución</option>
-                                    </select>
-                                </div>
-                                <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                    <select multiple name="Inversion" id="Inversion" class="selectpicker" data-title="Inversión" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
-                                        <option value="FEDERAL">Federal</option>
-                                        <option value="FONADIN">FONADIN</option>
-                                        <option value="FONDEN">FONDEN</option>
-                                        <option value="ESTATAL">Estatal</option>
-                                        <option value="PRIVADA">Privada</option>
-                                    </select>
-                                </div>
-                                <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                    <select multiple name="Anuncio" id="Anuncio" class="selectpicker" data-title="Anuncio" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
-                                        <option value="1">Plurianualidades</option>
-                                        <option value="2">Tercer Anuncio</option>
-                                        <option value="3">Primer Anuncio</option>
-                                        <option value="4">Segundo Anuncio</option>
-                                        <option value="5">Autopista Mitla - Tehuantepec II</option>
-                                        <option value="6">Autopista Barranca Larga - Ventanilla</option>
-                                        <option value="7">AIFA</option>
-                                        <option value="8">No Aplica</option>
-                                    </select>
-                                </div>
-                                <div class="col-12 mt-1 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-                                    <button id="btnReport" type="button" class="btn btn-default btn-default" style="background-color: #235B4E!important;">
-                                        <span class="btn-label">
-                                            <i class="fa fa-file-alt"></i>
-                                        </span>
-                                        Mostrar Reporte
-                                    </button>
-                                    <button type="button" id="btnClose" class="btn btn-wd btn-default btn-default mr-1" hidden>
-                                        <span class="btn-label">
-                                            <i class="fas fa-times"></i>
-                                        </span>
-                                        Cerrar Reporte
-                                    </button>
-                                </div>
+<div class="content">
+    <div class="container-fluid">
+        <div class="row card">
+            <div class="col-md-12 pt-2">
+                <small class="font-weight-normal">Analytics</small>
+                <h4 class="Chapala align-items-center font-weight-bold  mb-0 mt-0">
+                    <span style="color: #235b4e !important;"> Incidencias Reportadas</span>
+                </h4>
+            </div>
+            <div class="col-md-12" id="divContainer" style="">
+                <div class="row justify-content-center mt-3">
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                                @Html.DropDownListFor(m => m.Name, new SelectList(ViewBag.States, "Key", "Value"), new { multiple = true, @id = "Entidad", @class = "selectpicker", @data_style = "btn-default btn-outline", @data_title = "Entidad Federativa", @data_live_search = true, @data_actions_box = true })
+                            </div>
+                            <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                                <select multiple name="DireccionG" id="DireccionGral" class="selectpicker" data-title="Dirección General" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
+                                    <option value="ARTF">Agencia Reguladora de Transporte Ferroviario</option>
+                                    <option value="DGC">DG Carretera</option>
+                                    <option value="DGCC">DG Conservación de Carreteras</option>
+                                    <option value="DGDC">DG Desarrollo carretero</option>
+                                    <option value="DGTFM">DG Transporte Ferroviario y Multimodal</option>
+                                    <option value="Otros">Otros</option>
+                                </select>
+                            </div>
+                            <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                                <select multiple name="TipoP" id="TipoProyecto" class="selectpicker" data-title="Tipo de proyecto" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
+                                    <option value="1">Infraestructura para el bienestar</option>
+                                    <option value="2">Reactivación Económica</option>
+                                    <option value="3">Accesorio</option>
+                                    <option value="4">Territorio Yaqui</option>
+                                    <option value="5">Compromisos de presiones sociales</option>
+                                    <option value="6">Obras de compromiso sectorial</option>
+                                    <option value="7">Por Definir</option>
+                                </select>
+                            </div>
+                            <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                                <select multiple name="Etapa" id="Etapa" class="selectpicker" data-title="Etapa" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
+                                    <option value="1">En ejecución</option>
+                                    <option value="2">En proceso para ejecución</option>
+                                </select>
+                            </div>
+                            <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                                <select multiple name="Inversion" id="Inversion" class="selectpicker" data-title="Inversión" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
+                                    <option value="FEDERAL">Federal</option>
+                                    <option value="FONADIN">FONADIN</option>
+                                    <option value="FONDEN">FONDEN</option>
+                                    <option value="ESTATAL">Estatal</option>
+                                    <option value="PRIVADA">Privada</option>
+                                </select>
+                            </div>
+                            <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                                <select multiple name="Anuncio" id="Anuncio" class="selectpicker" data-title="Anuncio" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
+                                    <option value="1">Plurianualidades</option>
+                                    <option value="2">Tercer Anuncio</option>
+                                    <option value="3">Primer Anuncio</option>
+                                    <option value="4">Segundo Anuncio</option>
+                                    <option value="5">Autopista Mitla - Tehuantepec II</option>
+                                    <option value="6">Autopista Barranca Larga - Ventanilla</option>
+                                    <option value="7">AIFA</option>
+                                    <option value="8">No Aplica</option>
+                                </select>
+                            </div>
+                            <div class="col-12 mt-1 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+                                <button id="btnReport" type="button" class="btn btn-default btn-default" style="background-color: #235B4E!important;">
+                                    <span class="btn-label">
+                                        <i class="fa fa-file-alt"></i>
+                                    </span>
+                                    Mostrar Reporte
+                                </button>
+                                <button type="button" id="btnClose" class="btn btn-wd btn-default btn-default mr-1" hidden>
+                                    <span class="btn-label">
+                                        <i class="fas fa-times"></i>
+                                    </span>
+                                    Cerrar Reporte
+                                </button>
                             </div>
                         </div>
                     </div>
-                    <hr>
-                    <hr>
-                    <div id="divFichaTecnicaProyecto">
-                    </div>
+                </div>
+                <hr>
+                <hr>
+                <div id="divFichaTecnicaProyecto">
                 </div>
             </div>
         </div>
     </div>
+</div>
 @section scripts{
+    <!--  DataTable Plugin -->
+    <script src="~/js/plugins/jquery.dataTables.min.js"></script>
     <script src="~/js/core/vReportedIncidents.js" asp-append-version="true"></script>
 }
