--- a/PMCTool.App/Views/ReportedIncidents/_ReportIncidents.cshtml
+++ b/PMCTool.App/Views/ReportedIncidents/_ReportIncidents.cshtml
@@ -28,19 +28,27 @@
                             <td>
                                 @if (@row.Estatus == 1)
                                 {
-                                    <span class="badge ws badge-success"><strong>En tiempo</strong></span>
+                                    <span class="bold ws st-entiempo ws"><strong>En tiempo</strong></span>
                                 }
                                 @if (@row.Estatus == 2)
                                 {
-                                    <span class="badge ws badge-warning"><strong>Atrasado</strong></span>
+                                    <span class="bold st-atrasado ws"><strong>Atrasado</strong></span>
                                 }
                                 @if (@row.Estatus == 3)
                                 {
-                                    <span class="badge ws badge-danger"><strong>Con impacto</strong></span>
+                                    <span class="bold ws st-cimpacto ws"><strong>Con impacto</strong></span>
                                 }
                                 @if (@row.Estatus == 4)
                                 {
-                                    <span class="badge ws badge-secondary"><strong>Terminado</strong></span>
+                                    <span class="bold ws st-cerrado ws"><strong>Terminado</strong></span>
+                                }
+                                @if (@row.Estatus == 5)
+                                {
+                                    <span class="bold ws st-cancelado  ws"><strong>Cancelado</strong></span>
+                                }
+                                @if (@row.Estatus == 6)
+                                {
+                                    <span class="bold ws st-suspendido ws"><strong>Archivado</strong></span>
                                 }
 
                             </td>
@@ -102,7 +110,7 @@
 
                                                             break;
                                                         case 4:
-                                                            <td><span class="bold ws st-cerrado ws">Cerrado</span></td>
+                                                            <td><span class="bold ws st-cerrado ws">Terminado</span></td>
 
                                                             break;
                                                         case 5:
