Ajustes en fichas tecnicas

--- a/PMCTool.App/Views/FactSheet/A/ProjectDetailReport.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/ProjectDetailReport.cshtml
@@ -214,7 +214,7 @@
                                                       <th>Incidente</th>
                                                       <th>Elemento relacionado</th>
                                                       <th>Fecha de solución</th>
-                                                      <th>Acciones</th>
+                                                      <th>Detalle del incidente</th>
                                                       <th>Estatus</th>
                                                    </tr>
                                                 </thead>
