--- a/PMCTool.App/Views/FactSheet/A/ProjectDetail.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/ProjectDetail.cshtml
@@ -175,7 +175,7 @@
                                                       <th>Incidente</th>
                                                       <th>Elemento relacionado</th>
                                                       <th>Fecha de solución</th>
-                                                      <th>Acciones</th>
+                                                      <th>Detalle del incidente</th>
                                                       <th>Estatus</th>
                                                    </tr>
                                                 </thead>
