--- a/PMCTool.App/Views/ReportedIncidents/Index.cshtml
+++ b/PMCTool.App/Views/ReportedIncidents/Index.cshtml
@@ -22,7 +22,8 @@
                             <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                                 <select multiple name="DireccionG" id="DireccionGral" class="selectpicker" data-title="Dirección General" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
                                     <option value="ARTF">Agencia Reguladora de Transporte Ferroviario</option>
-                                    <option value="DGC">DG Carretera</option>
+                                    <option value="DGCF">Dirección General de Carreteras Federales (DGCF)</option>
+                                    <option value="DGCRyA">Dirección General de Caminos Rurales y Alimentadores (DGCRyA)</option>
                                     <option value="DGCC">DG Conservación de Carreteras</option>
                                     <option value="DGDC">DG Desarrollo carretero</option>
                                     <option value="DGTFM">DG Transporte Ferroviario y Multimodal</option>
@@ -42,8 +43,12 @@
                             </div>
                             <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                                 <select multiple name="Etapa" id="Etapa" class="selectpicker" data-title="Etapa" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
-                                    <option value="1">En ejecución</option>
-                                    <option value="2">En proceso para ejecución</option>
+                                    <option value="1">Potenciales</option>
+                                    <option value="2">Preparación</option>
+                                    <option value="3">En proceso de análisis</option>
+                                    <option value="4">Autorización</option>
+                                    <option value="5">Preparativos de ejecución</option>
+                                    <option value="6">Ejecución</option>
                                 </select>
                             </div>
                             <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
