--- a/PMCTool.App/Views/ReportedIncidents/_ParcialIncidentsByProject.cshtml
+++ b/PMCTool.App/Views/ReportedIncidents/_ParcialIncidentsByProject.cshtml
@@ -13,7 +13,7 @@
                             <th scope="col">Incidente</th>
                             <th scope="col">Elemento relacionado</th>
                             <th scope="col">Fecha de solución</th>
-                            <th scope="col">Acciones</th>
+                            <th scope="col">Detalle del incidente</th>
                             <th scope="col">Estatus</th>
                         </tr>
                     </thead>
