SCT -- CORECCION -- #967 PMCT.Analytics - Analytics>Estatus Cerrado cambiar por "Terminado"

--- a/PMCTool.App/Views/FactSheet/A/ProjectDetail.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/ProjectDetail.cshtml
@@ -131,7 +131,7 @@
                                                                                 <td><span class="bold ws st-cimpacto ws">Con impacto</span></td> 
                                                                             break;
                                                                         case 4: 
-                                                                                <td><span class="bold ws st-cerrado ws">Cerrado</span></td> 
+                                                                                <td><span class="bold ws st-cerrado ws">Terminado</span></td> 
                                                                             break;
                                                                         case 5:  
                                                                                 <td><span class="bold ws st-cancelado  ws">Cancelado</span></td> 
