--- a/PMCTool.App/Views/GlobalStatus/_PartialTableGlobalStatusDetail.cshtml
+++ b/PMCTool.App/Views/GlobalStatus/_PartialTableGlobalStatusDetail.cshtml
@@ -47,7 +47,7 @@
                             }
                             @if (@item.Status == 4)
                             {
-                                <span class="ws st-cerrado">Cerrado</span>
+                                <span class="ws st-cerrado">Terminado</span>
                             }
                             @if (@item.Status == 5)
                             {
