--- a/PMCTool.App/Views/FactSheet/A/ProjectDetailReport.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/ProjectDetailReport.cshtml
@@ -286,25 +286,106 @@
                                  <!---->
                                  <div class="row">
                                     <div class="col-md-12 pt-4">
-                                       <div class="row">
-                                          <div class="col-md-12">
-                                             <p class="title-section">
-                                                <b>Acciones a realizar</b>
-                                             </p>
-                                          </div>
-                                          <div class="col-md-12 pb-4">
-                                              @{
-                                                  string Actions = @ActionsToBeTaken;
-                                                  if (Actions != null)
-                                                  {
-                                                      Actions = @ActionsToBeTaken.Replace("|", "<br>");
-
-                                                   }
-                                              }
-                                              @Html.Raw(@Actions)
-                                          </div>
-                                       </div>
-                                    </div>
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                 <p class="title-section">
+                                                    <b>Acciones a realizar</b>
+                                                 </p>
+                                            </div>
+                                            <div class="col-md-12 pb-4">
+                                                @if (Model.ActionPlan.Count > 0)
+                                                {
+                                                    <table class="table table-hover table-striped">
+                                                        <thead>
+                                                            <tr style="background-color: #235b4e;">
+                                                                <th rowspan="2" style="border: 1px solid !important;">Incidente</th>
+                                                                <th colspan="3" style="border: 1px solid !important; text-align:center;display: table-cell;">Plan de acción</th>
+                                                            </tr>
+                                                            <tr style="background-color: #235b4e;">
+                                                                <th style="border: 1px solid !important;">Descripcion</th>
+                                                                <th style="border: 1px solid !important;">Fecha de solución</th>
+                                                                <th>Estatus</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            @foreach (var a in Model.Incidents)
+                                                            {
+                                                                int count = 0;
+                                                                @foreach (var b in Model.ActionPlan)
+                                                                {
+                                                                    @if (a.ProjectIncidentID == b.ProjectIncidentID)
+                                                                    {
+                                                                        count++;
+                                                                        @if (count == 1)
+                                                                        {
+                                                                            <tr>
+                                                                                <th rowspan="@a.CountActionPlan">@a.Description</th>
+                                                                                <td>@b.Description</td>
+                                                                                <td>@b.PlannedEndDate</td>
+                                                                                @switch (@b.Status)
+                                                                                {
+                                                                                    case 1:
+                                                                                        <td><span class="bold ws st-entiempo ws">En tiempo</span></td>
+                                                                                        break;
+                                                                                    case 2:
+                                                                                        <td><span class="bold st-atrasado ws">Atrasado</span></td>
+                                                                                        break;
+                                                                                    case 3:
+                                                                                        <td><span class="bold ws st-cimpacto ws">Con impacto</span></td>
+                                                                                        break;
+                                                                                    case 4:
+                                                                                        <td><span class="bold ws st-cerrado ws">Terminado</span></td>
+                                                                                        break;
+                                                                                    case 5:
+                                                                                        <td><span class="bold ws st-cancelado  ws">Cancelado</span></td>
+                                                                                        break;
+                                                                                    case 6:
+                                                                                        <td><span class="bold ws st-suspendido ws">Archivado</span></td>
+                                                                                        break;
+                                                                                }
+                                                                            </tr>
+                                                                        }
+                                                                        else
+                                                                        {
+                                                                            <tr>
+                                                                                <td>@b.Description</td>
+                                                                                <td>@b.PlannedEndDate</td>
+                                                                                @switch (@b.Status)
+                                                                                {
+                                                                                    case 1:
+                                                                                        <td><span class="bold ws st-entiempo ws">En tiempo</span></td>
+                                                                                        break;
+                                                                                    case 2:
+                                                                                        <td><span class="bold st-atrasado ws">Atrasado</span></td>
+                                                                                        break;
+                                                                                    case 3:
+                                                                                        <td><span class="bold ws st-cimpacto ws">Con impacto</span></td>
+                                                                                        break;
+                                                                                    case 4:
+                                                                                        <td><span class="bold ws st-cerrado ws">Terminado</span></td>
+                                                                                        break;
+                                                                                    case 5:
+                                                                                        <td><span class="bold ws st-cancelado  ws">Cancelado</span></td>
+                                                                                        break;
+                                                                                    case 6:
+                                                                                        <td><span class="bold ws st-suspendido ws">Archivado</span></td>
+                                                                                        break;
+                                                                                }
+                                                                            </tr>
+                                                                        }
+                                                                    }
+                                                                }
+                                                            }
+                                                        </tbody>
+                                                    </table>
+                                                }
+                                                else
+                                                {
+                                                    <div class="text-center"><i>No se encontraron datos</i></div>
+                                                }
+                                            </div>
+                                         </div>
+                                     </div>
                                  </div>
                             </div>
                          </div>
