--- a/PMCTool.App/Views/FactSheet/A/_ParcialIndexA.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/_ParcialIndexA.cshtml
@@ -169,7 +169,7 @@
                                     }
                                     <div class="step @classActive">
                                         <span>@item.text</span> <br>
-                                        <span>@item.start_date</span>
+                                        <span>@item.EndDateClient.ToString("yyyy-MM-dd")</span>
                                     </div>
                                     @*<div class="step">
                                     <span>Presentación de propuestas</span> <br>
